--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9.5"
 pandas = "^2.2.2"
 requests = "^2.32.3"
+datetime = "^5.5"
 
 [tool.poetry.group.dev.dependencies]
 requests = "^2.32.3"
