--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9.5"
 pandas = "^2.2.2"
 requests = "^2.32.3"
 datetime = "^5.5"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 requests = "^2.32.3"
